--- a/Set 1.ipynb
+++ b/Set 1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -20,39 +20,23 @@
       "Requirement already satisfied: scipy in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.14.1)\n",
       "Requirement already satisfied: plotly in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (5.24.1)\n",
       "Requirement already satisfied: pandas in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.3)\n",
-      "Collecting nbformat\n",
-      "  Downloading nbformat-5.10.4-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Requirement already satisfied: nbformat in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (5.10.4)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from plotly) (9.0.0)\n",
       "Requirement already satisfied: packaging in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from plotly) (24.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Collecting fastjsonschema>=2.15 (from nbformat)\n",
-      "  Downloading fastjsonschema-2.20.0-py3-none-any.whl.metadata (2.1 kB)\n",
-      "Collecting jsonschema>=2.6 (from nbformat)\n",
-      "  Downloading jsonschema-4.23.0-py3-none-any.whl.metadata (7.9 kB)\n",
+      "Requirement already satisfied: fastjsonschema>=2.15 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nbformat) (2.20.0)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nbformat) (4.23.0)\n",
       "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from nbformat) (5.7.2)\n",
       "Requirement already satisfied: traitlets>=5.1 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from nbformat) (5.14.3)\n",
-      "Collecting attrs>=22.2.0 (from jsonschema>=2.6->nbformat)\n",
-      "  Using cached attrs-24.2.0-py3-none-any.whl.metadata (11 kB)\n",
-      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading jsonschema_specifications-2023.12.1-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting referencing>=0.28.4 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading referencing-0.35.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting rpds-py>=0.7.1 (from jsonschema>=2.6->nbformat)\n",
-      "  Downloading rpds_py-0.20.0-cp312-none-win_amd64.whl.metadata (4.2 kB)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=2.6->nbformat) (24.2.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=2.6->nbformat) (2023.12.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=2.6->nbformat) (0.35.1)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\users\\ktnlvr\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=2.6->nbformat) (0.20.0)\n",
       "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
       "Requirement already satisfied: pywin32>=300 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (306)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\ktnlvr\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Downloading nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
-      "Downloading fastjsonschema-2.20.0-py3-none-any.whl (23 kB)\n",
-      "Downloading jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
-      "Using cached attrs-24.2.0-py3-none-any.whl (63 kB)\n",
-      "Downloading jsonschema_specifications-2023.12.1-py3-none-any.whl (18 kB)\n",
-      "Downloading referencing-0.35.1-py3-none-any.whl (26 kB)\n",
-      "Downloading rpds_py-0.20.0-cp312-none-win_amd64.whl (214 kB)\n",
-      "Installing collected packages: fastjsonschema, rpds-py, attrs, referencing, jsonschema-specifications, jsonschema, nbformat\n",
-      "Successfully installed attrs-24.2.0 fastjsonschema-2.20.0 jsonschema-4.23.0 jsonschema-specifications-2023.12.1 nbformat-5.10.4 referencing-0.35.1 rpds-py-0.20.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -63,20 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import base64\n",
     "from string import ascii_letters, printable\n",
     "from collections import Counter\n",
-    "import numpy as np\n",
-    "import plotly.express as px"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +90,7 @@
        "b'SSdtIGtpbGxpbmcgeW91ciBicmFpbiBsaWtlIGEgcG9pc29ub3VzIG11c2hyb29t'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +120,7 @@
        "'746865206b696420646f6e277420706c6179'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -167,14 +150,13 @@
        "b\"Cooking MC's like a pound of bacon\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import scipy.stats\n",
-    "\n",
     "\n",
     "string = \"1b37373331363f78151b7f2b783431333d78397828372d363c78373e783a393b3736\"\n",
     "bs = bytes.fromhex(string)\n",
@@ -184,9 +166,10 @@
     "    new = bytes([b ^ ord(ch) for b in bs])\n",
     "    strings.append(new)\n",
     "\n",
-    "def score(bstr):\n",
+    "def ss(bstr):\n",
     "    if any(chr(x) not in printable or chr(x) in \"{}()\" for x in bstr):\n",
     "        return -1\n",
+    "\n",
     "    freq = letter_freq(bstr.decode(\"ascii\").lower())\n",
     "    freq_arr = np.array(list(freq.values()))\n",
     "    legit_text_statistic = len(bstr) - sum([1 for x in bstr if chr(x) not in ascii_letters + \".,?!' \"])\n",
@@ -194,7 +177,7 @@
     "    return legit_text_statistic / ks_test_2\n",
     "    \n",
     "\n",
-    "strings.sort(key=score, reverse=True)\n",
+    "strings.sort(key=ss, reverse=True)\n",
     "strings[0]"
    ]
   },
@@ -207,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -216,23 +199,38 @@
        "b'Now that the party is jumping\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bs = [bytes.fromhex(s) for s in open(\"challenge-data/4.txt\").readlines()]\n",
+    "bs = [bytes.fromhex(line) for line in open(\"challenge-data/4.txt\").readlines()]\n",
+    "\n",
+    "c = set()\n",
+    "def break_single_character_xor(bs):\n",
+    "    ss = 100000\n",
+    "    chh = 0\n",
+    "    for ch in range(127):\n",
+    "        new = bytes([b ^ ch for b in bs])\n",
+    "        s = score(new)\n",
+    "        c.add(s)\n",
+    "        if s > ss:\n",
+    "            ss = s\n",
+    "            chh = ch\n",
+    "    return ss, chh\n",
+    "\n",
+    "def decrypt_xor(s, k):\n",
+    "    return bytes(b ^ k for b in s)\n",
     "\n",
     "guesses = []\n",
-    "for string in bs:\n",
-    "    for ch in range(255):\n",
-    "        new = bytes([b ^ ch for b in string])\n",
-    "        s = score(new)\n",
-    "        guesses.append((s, new))\n",
+    "for line in bs:\n",
+    "    s, ch = break_single_character_xor(line)\n",
+    "    guesses.append((s, ch, line))\n",
     "guesses.sort(reverse=True)\n",
+    "_, k, s = guesses[0]\n",
     "\n",
-    "guesses[0][1]"
+    "decrypt_xor(s, k)\n"
    ]
   },
   {
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +251,7 @@
        "'0b3637272a2b2e63622c2e69692a23693a2a3c6324202d623d63343c2a26226324272765272a282b2f20430a652e2c652a3124333a653e2b2027630c692b20283165286326302e27282f'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +310,104 @@
     "    return sum((x ^ y).bit_count() for x, y in zip_longest(a, b, fillvalue=0))\n",
     "\n",
     "assert hamming_distance(b\"this is a test\", b\"wokka wokka!!!\") == 37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2.7593244194229416, 29), (3.152560455192034, 38), (3.1643356643356664, 13), (3.1652690426275334, 9), (3.165379213483146, 16), (3.1743859649122794, 15), (3.1751233262861183, 22), (3.1800000000000015, 40), (3.182394366197183, 20), (3.1833154314357315, 49)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guesses = []\n",
+    "\n",
+    "for keysize in range(2, 50):\n",
+    "    distance_total = 0\n",
+    "    pairs_processed = 0\n",
+    "    for idx in range(0, len(string) // keysize - 1):\n",
+    "        chunk_a = string[idx * keysize:(idx + 1) * keysize]\n",
+    "        chunk_b = string[(idx + 1) * keysize:(idx + 2) * keysize]\n",
+    "        distance_total += hamming_distance(chunk_a, chunk_b) / keysize\n",
+    "        pairs_processed += 1\n",
+    "    avg = distance_total / pairs_processed\n",
+    "    guesses.append((avg, keysize))\n",
+    "\n",
+    "guesses.sort()\n",
+    "best_guess = guesses[0][1]\n",
+    "print(guesses[:10])\n",
+    "\n",
+    "best_guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Terminator X: Bring the noise'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups = [b\"\" for _ in range(best_guess)]\n",
+    "\n",
+    "for i in range(len(string)):\n",
+    "    groups[i % best_guess] += bytes([string[i]])\n",
+    "\n",
+    "key = \"\"\n",
+    "for g in groups:\n",
+    "    _, ch = break_single_character_xor(g)\n",
+    "    key += chr(ch)\n",
+    "key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm back and I'm ringin' the bell \\nA rockin' on the mike while the fly girls yell \\nIn ecstasy in the back of me \\nWell that's my DJ Deshay cuttin' all them Z's \\nHittin' hard and the girlies goin' crazy \\nVanilla's on the mike, man I'm not lazy. \\n\\nI'm lettin' my drug kick in \\nIt controls my mouth and I begin \\nTo just let it flow, let my concepts go \\nMy posse's to the side yellin', Go Vanilla Go! \\n\\nSmooth 'cause that's the way I will be \\nAnd if you don't give a damn, then \\nWhy you starin' at me \\nSo get off 'cause I control the stage \\nThere's no dissin' allowed \\nI'm in my own phase \\nThe girlies sa y they love me and that is ok \\nAnd I can dance better than any kid n' play \\n\\nStage 2 -- Yea the one ya' wanna listen to \\nIt's off my head so let the beat play through \\nSo I can funk it up and make it sound good \\n1-2-3 Yo -- Knock on some wood \\nFor good luck, I like my rhymes atrocious \\nSupercalafragilisticexpialidocious \\nI'm an effect and that you can bet \\nI can take a fly girl and make her wet. \\n\\nI'm like Samson -- Samson to Delilah \\nThere's no denyin', You can try to hang \\nBut you'll keep tryin' to get my style \\nOver and over, practice makes perfect \\nBut not if you're a loafer. \\n\\nYou'll get nowhere, no place, no time, no girls \\nSoon -- Oh my God, homebody, you probably eat \\nSpaghetti with a spoon! Come on and say it! \\n\\nVIP. Vanilla Ice yep, yep, I'm comin' hard like a rhino \\nIntoxicating so you stagger like a wino \\nSo punks stop trying and girl stop cryin' \\nVanilla Ice is sellin' and you people are buyin' \\n'Cause why the freaks are jockin' like Crazy Glue \\nMovin' and groovin' trying to sing along \\nAll through the ghetto groovin' this here song \\nNow you're amazed by the VIP posse. \\n\\nSteppin' so hard like a German Nazi \\nStartled by the bases hittin' ground \\nThere's no trippin' on mine, I'm just gettin' down \\nSparkamatic, I'm hangin' tight like a fanatic \\nYou trapped me once and I thought that \\nYou might have it \\nSo step down and lend me your ear \\n'89 in my time! You, '90 is my year. \\n\\nYou're weakenin' fast, YO! and I can tell it \\nYour body's gettin' hot, so, so I can smell it \\nSo don't be mad and don't be sad \\n'Cause the lyrics belong to ICE, You can call me Dad \\nYou're pitchin' a fit, so step back and endure \\nLet the witch doctor, Ice, do the dance to cure \\nSo come up close and don't be square \\nYou wanna battle me -- Anytime, anywhere \\n\\nYou thought that I was weak, Boy, you're dead wrong \\nSo come on, everybody and sing this song \\n\\nSay -- Play that funky music Say, go white boy, go white boy go \\nplay that funky music Go white boy, go white boy, go \\nLay down and boogie and play that funky music till you die. \\n\\nPlay that funky music Come on, Come on, let me hear \\nPlay that funky music white boy you say it, say it \\nPlay that funky music A little louder now \\nPlay that funky music, white boy Come on, Come on, Come on \\nPlay that funky music \\n\""
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import cycle\n",
+    "\n",
+    "def decrypt_long_xor(s, key):\n",
+    "    return bytes([c ^ k for c, k in zip(s, cycle(key))])\n",
+    "\n",
+    "decrypt_long_xor(string, key.encode(\"ascii\")).decode()"
    ]
   }
  ],
